--- a/frontend/src/pages/inventory/Inventory.module.css
+++ b/frontend/src/pages/inventory/Inventory.module.css
@@ -1,4 +1,4 @@
-/* Container */
+
 .container {
     position: fixed;
     top: 70px;
@@ -12,7 +12,6 @@
     overflow-y: auto;
 }
 
-/* Heading */
 .heading {
     text-align: center;
     color: #4A148C;
@@ -27,7 +26,6 @@
     margin-bottom: 15px;
 }
 
-/* Background Container */
 .bgContainer {
     position: fixed;
     top: 0;
@@ -42,7 +40,7 @@
     align-items: center;
 }
 
-/* Form Container */
+
 .formContainer {
     background-color: #FFFFFF;
     padding: 30px;
@@ -53,7 +51,6 @@
     text-align: left;
 }
 
-/* Form */
 .form {
     display: flex;
     flex-direction: column;
@@ -85,12 +82,12 @@
     background-color: #6A1B9A;
 }
 
-/* List Container */
+
 .listContainer {
     margin-top: 30px;
 }
 
-/* Filters */
+
 .filters {
     display: flex;
     flex-direction: row;
@@ -101,11 +98,12 @@
     flex: 2;
 }
 
-/* List and Items */
+
 .list {
     list-style-type: none;
     padding: 0;
 }
+
 
 .listItem {
     background-color: #F3E5F5;
@@ -114,4 +112,18 @@
     border-radius: 10px;
     text-align: left;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, color 0.3s ease; 
+}
+
+
+.listItem:hover {
+    background-color: #6A1B9A; 
+    color: white;
+}
+.listItem p {
+    transition: color 0.3s ease;
+}
+
+.listItem:hover p {
+    color: white;
 }
