--- a/frontend/src/pages/debtor/Debtor.module.css
+++ b/frontend/src/pages/debtor/Debtor.module.css
@@ -42,15 +42,29 @@
     align-items: center;
 }
 
+.formOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
 
 .formContainer {
     background-color: #FFFFFF;
+    position: relative;
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     width: 90%;
     max-width: 500px;
-    text-align: left;
+    text-align: center;
+    z-index: 1010;
 }
 
 
@@ -126,6 +140,9 @@
     transition: background-color 0.3s ease, color 0.3s ease; 
 }
 
+.blurBackground {
+    filter: blur(5px);
+}
 
 .listItem:hover {
     background-color: #6A1B9A; 
