--- a/frontend/src/pages/inventory/Inventory.module.css
+++ b/frontend/src/pages/inventory/Inventory.module.css
@@ -127,3 +127,36 @@
 .listItem:hover p {
     color: rgb(65, 0, 118);
 }
+
+.loginPrompt {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+}
+
+.loginPrompt p {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #d699fb;
+}
+
+.loginButton {
+    padding: 10px 20px;
+    background-color: #4A148C;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.loginButton:hover {
+    background-color: #45a049;
+}
+
+.container {
+    padding: 20px;
+}
