--- a/frontend/src/pages/login/login.module.css
+++ b/frontend/src/pages/login/login.module.css
@@ -1,6 +1,16 @@
+.txtLogo{
+    position: absolute;
+    width: 200px;
+    top: 11%;
+    right: 43%;
+    animation: bounce 2s infinite;
+}
+
 .container {
+    position: relative;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #011638;
@@ -85,5 +95,17 @@
     }
     to {
         opacity: 1;
+    }
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-20px);
+    }
+    60% {
+        transform: translateY(-10px);
     }
 }
