--- a/frontend/src/pages/signup/signup.module.css
+++ b/frontend/src/pages/signup/signup.module.css
@@ -1,18 +1,29 @@
+.bg{
+    background-image: url('../../assets/bg/bg1.svg');    
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .txtLogo{
     position: absolute;
     width: 200px;
     top: 11%;
-    right: 43%;
     animation: bounce 2s infinite;
 }
 
 .container {
     position: relative;
     height: 100vh;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #011638;
     font-family: 'Roboto', sans-serif;
     color: white;
 }
@@ -20,7 +31,11 @@
 .formContainer {
     width: 100%;
     max-width: 400px;
-    background-color: #2E294E;
+    background-image: url('../../assets/bg/bg2.svg');    
+    background-size: 600px; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
@@ -59,7 +74,7 @@
 .input:focus {
     outline: none;
     border-color: #D499B9;
-    box-shadow: 0 0 5px rgba(212, 153, 185, 0.5);
+    box-shadow: 0 0 5px #d499b980;
 }
 
 .button {
@@ -72,6 +87,7 @@
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .button:hover {
